# type-class

./: .ghci  type-class.cabal
src/Data/: Functor.hs  Semigroupoid.hs
src/Data/Functor/: Alt.hs  Applicative.hs  Apply.hs  Bind.hs  BindTrans.hs  BindTransform.hs  Comonad.hs  ComonadHoist.hs  ComonadTrans.hs  Contravariant.hs  Coproduct.hs  Distributive.hs  Extend.hs  ExtendHoist.hs  ExtendTrans.hs  Foldable.hs  Foldable1.hs  Functor.hs  Id.hs  Monad.hs  MonadAlt.hs  MonadPlus.hs  MonadTrans.hs  MonadTransform.hs  Plus.hs  Product.hs  Traversable.hs  Traversable1.hs
src/Data/Semigroupoid/: Arrow.hs  Category.hs  ChooseIn.hs  ChooseOut.hs  CombineIn.hs  CombineOut.hs  Disjoint.hs  First.hs  Left.hs  Monoid.hs  Reducer.hs  Right.hs  Second.hs  Semigroup.hs  Semigroupoid.hs  Split.hs  Tensor.hs
