Name:               type-class
Version:            0.0.1
License:            BSD3
License-File:       LICENSE
Author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
Maintainer:         Tony Morris
Copyright:          Tony Morris
Synopsis:           A skeleton for creating haskell packages
Category:           Development
Description:        A skeleton for creating haskell packages
Homepage:           https://github.com/tonymorris/haskell-package
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         git@github.com:tonymorris/haskell-package.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Library
  Build-Depends:
                    base < 5 && >= 3

  GHC-Options:
                    -Wall

  Hs-Source-Dirs:
                    src

  Exposed-Modules:
                    Data.Functor
                    Data.Functor.Alt
                    Data.Functor.Applicative
                    Data.Functor.Apply
                    Data.Functor.Bind
                    Data.Functor.BindTrans
                    Data.Functor.BindTransform
                    Data.Functor.Comonad
                    Data.Functor.ComonadHoist
                    Data.Functor.ComonadTrans
                    Data.Functor.Contravariant
                    Data.Functor.Coproduct
                    Data.Functor.Distributive
                    Data.Functor.Extend
                    Data.Functor.ExtendHoist
                    Data.Functor.ExtendTrans
                    Data.Functor.Foldable
                    Data.Functor.Foldable1
                    Data.Functor.Functor
                    Data.Functor.Id
                    Data.Functor.Monad
                    Data.Functor.MonadAlt
                    Data.Functor.MonadPlus
                    Data.Functor.MonadTrans
                    Data.Functor.MonadTransform
                    Data.Functor.Plus
                    Data.Functor.Product
                    Data.Functor.Traversable
                    Data.Functor.Traversable1
                    Data.Semigroupoid
                    Data.Semigroupoid.Arrow
                    Data.Semigroupoid.Category
                    Data.Semigroupoid.ChooseIn
                    Data.Semigroupoid.ChooseOut
                    Data.Semigroupoid.CombineIn
                    Data.Semigroupoid.CombineOut
                    Data.Semigroupoid.Disjoint
                    Data.Semigroupoid.First
                    Data.Semigroupoid.Left
                    Data.Semigroupoid.Monoid
                    Data.Semigroupoid.Reducer
                    Data.Semigroupoid.Right
                    Data.Semigroupoid.Second
                    Data.Semigroupoid.Semigroup
                    Data.Semigroupoid.Semigroupoid
                    Data.Semigroupoid.Split
                    Data.Semigroupoid.Tensor

